--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://example.org/"
+baseURL: "https://mheck136.github.io/"
 languageCode: "en-us"
 title: "mheck136"
 theme: "github.com/adityatelange/hugo-PaperMod"
